--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@supabase/ssr": "^0.2.0",
-    "@supabase/supabase-js": "^2.39.8",
+    "@supabase/supabase-js": "2.39.8",
     "dayjs": "^1.11.10",
     "isbot": "^4.1.0",
     "miniflare": "^3.20231030.4",
